src/app/views/jobs/create-update-job/create-update-job.component.scss
::ng-deep .mat-form-field-infix{
    padding: 0.5em 0 !important;
    padding-bottom: 1em !important;
  }
  ::ng-deep .mat-form-field-wrapper{
    padding: 15px 0 !important;
  }
  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-prefix,
  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-suffix {
    top: .25em !important;
  }
  // Rich editor css
  .editor-container {
    border: 1px solid #ccc;
    border-radius: 4px;
    margin: 10px 0;
  }
  .ck-editor__editable_inline {
    min-height: 300px;
    border: 1px solid #ccc;
    padding: 10px;
    border-radius: 5px;
  }
  
  .settings-table-bg{
    max-height: max-content !important;
  }
  .settings-table-bg ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline{
  background: #fff;
  }
  table .contact-form-content ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper,
  table .contact-form-content ::ng-deep .mat-form-field-wrapper {
  margin: 0 !important;
  padding: 0 !important;
  }
  
  .emp-add-btn{
    height: 40px;
    margin-left: 15px;
    align-self: center;
  }
  
  .settings-form-bg{
    max-height: 70vh !important;
  }
  
  .mat-select-search-wrapper {
    padding: 8px;
    background-color: #fff;
  }
  
  .mat-select-search {
    width: 100%;
  }
  
  .custom-select-panel {
    max-height: 300px; /* Set a max height for the dropdown */
    overflow-y: auto; /* Make sure dropdown scrolls if it overflows */
  }
  .search-icon{
    font-size:x-large;
    color: #ccc;
  }
  ::ng-deep .mat-paginator-page-size{
    display: none !important;
  }
  mat-radio-group {
    display: flex;
    align-items: center;
  }
  .radio-button{
    margin-left: 10px;
  }

